<resources>
    <string name="app_name">FormationAndroid</string>
    <string name="hello_world">Hello world!%1$s</string>
    <string name="action_settings">Settings</string>
    <string name="dyn_hello">Voici un hello...</string>
    <string name="login">Username</string>
    <string name="pass">Password</string>
    <string name="connect">Connect</string>
    <string name="wat_nbChar">Il reste 20 caractères</string>
    <string name="wat_sendMessage">Envoyer</string>
    <string name="wat_msg">Entrez votre texte içi...</string>
    <string name="addNotification">Notification</string>
    <string name="notification_launching_title">Titre de la Notification (launching)</string>
    <string name="notification_title">Titre de la Notification</string>
    <string name="notification_desc">Description de la Notification</string>
    <string name="share">Partager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bienvenue</string>
    <string name="titre_ttt">Le Tic Tac Toe !!!</string>
</resources>
